Bug 25409 - [bisected] rendering corruption since a938673e
Summary: [bisected] rendering corruption since a938673e
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: 7.4 (2008.09)
Hardware: x86 (IA32) Linux (All)
: high critical
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: regression
: 25414 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-12-02 16:00 UTC by Petar Velkovski
Modified: 2009-12-06 23:12 UTC (History)
5 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg log (69.09 KB, text/x-log)
2009-12-02 16:00 UTC, Petar Velkovski
no flags Details
Screenshot of the Desktop (861.05 KB, image/jpeg)
2009-12-02 16:05 UTC, Petar Velkovski
no flags Details

Description Petar Velkovski 2009-12-02 16:00:32 UTC
Created attachment 31691 [details]
Xorg log

Problem occurs in xserver-xorg-video-intel 2.9.99.901+git20091202.a938673e
Problem not present in xserver-xorg-video-intel 2.9.99.901~git20091202.ad68881b

Desktop completely garbled!

Some of the effects noticed:

1. Slowness of rendering some elements!
The Desktop uses Compiz. Only some rendering actions are slowed. For instance when moving "wobbly" windows, they react normally and are rendered without slowing down

2. Menu elements highlighting leaves some of them highlighted (can be see on the screenshot)

3. Text elements garbled (can be seen on the screenshot)

4. Delayed reaction to key presses in for instance Console or the Desktop login screen. In the login screen there is no garbling present only delayed rendering

5. Switching to virtual terminal and then returning to the desktop makes matters worse
Comment 1 Petar Velkovski 2009-12-02 16:05:29 UTC
Created attachment 31692 [details]
Screenshot of the Desktop
Comment 2 Gordon Jin 2009-12-02 19:49:13 UTC
I can reproduce this regression. This should be rc2 blocker.

commit a938673ee84d51ef655c37dfa7bbc5c35334cd28
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Dec 2 20:51:53 2009 +0000

    batch: Downgrade batch submission from a FatalError.
    
    If we wedge the GPU then we will return -EIO for the current batch and
    then attempt to reset the GPU. Meanwhile the X server detects the error,
    throws a FatalError and to all intents and purposes appears to crash to
    the user - whereas before it often just appeared to momentarily freeze.
    Of course, on older hardware the server remains frozen until we can find
    a way to reset those GPUs at runtime.
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 Chris Wilson 2009-12-04 01:10:22 UTC
Gordon, I think your bisection is off-by-one in this case.

commit 415aab474edd1425034981306718afd8506445f1
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Dec 4 09:02:36 2009 +0000

    intel: And remember to flush the batch...
    
    In commit 98e11210
    
      Remove flush parameter from intel_batch_flush()
    
    Maxi spotted that I had broken screen updating. It appears in my haste
    to eliminate the extra parameter I removed a call to intel_batch_flush()
    when throttling, i.e. when pushing the updates to the screen before
    idling.
    
    Should fix:
    
      Bug 25409 [bisected] rendering corruption since a938673e
      https://bugs.freedesktop.org/show_bug.cgi?id=25409
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Comment 4 Petar Velkovski 2009-12-04 11:14:34 UTC
Chris,

I made a test with xserver-xorg-video-intel 2.9.99.901+git20091204.415aab47 and as far as I'm concerned this bug is fixed.

Not that is your concern, but with the last updates I've made with mesa and libdrm, I'm getting excellent speed and rendering results with Blender, a program that I use to test the progress of the intel driver since the big architectural changes happened to it. This is just to tell you that you are making excellent progress :)

However one issue remains with the latest version of this driver, and that is font garbling that occurred since 6729b508, or with the commits submitted after the good working dbb68168 and submit 6729b508 .

I have opened a bug report too for it. Sorry for the mistakes I've made in the report, but I got headache from upgrading/downgrading/testing/suspending while I figure out what is wrong. This is the bug report:

http://bugs.freedesktop.org/show_bug.cgi?id=25406

As for this bug, I'm closing it
Comment 5 Tobias Jakobi 2009-12-05 04:08:52 UTC
*** Bug 25414 has been marked as a duplicate of this bug. ***
Comment 6 fangxun 2009-12-06 23:12:28 UTC
There is still one small problem: If compiz is enabled, cursor format and cursor blink rate is wrong in console. I file a new Bug 25481 for track this issue.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.