src/i830_driver.c
@@ -999,6 +999,7 @@ I830BlockHandler(int i, pointer blockData, pointer pTimeout, pointer pReadmask)
 		 */
 		if (flush)
 			intel_batch_pipelined_flush(scrn);
+		intel_batch_flush(scrn);
 		drmCommandNone(intel->drmSubFD, DRM_I915_GEM_THROTTLE);
 
 		intel->need_mi_flush = FALSE;
